feat: initialize Nuxt 4 project with essential configurations and dependencies
- Added nuxt.config.ts for project configuration including SSR settings and Vite optimizations.
- Created package.json with scripts for development, build, and PDF synchronization.
- Added favicon.ico for branding in the application.
- Included robots.txt for search engine directives.
- Implemented sync-pdf.mjs script to manage PDF file synchronization.
- Configured TypeScript support with tsconfig.json files for server and project.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@
 
 # Custom settings
 .vscode/*
+
+# Nuxt build output
+site/.output/
+site/.nuxt/
+site/node_modules/
+site/.data/
+
+# Scripts
+scripts/node_modules/
+
+# Generated assets (built by CI)
+site/public/notes.pdf
+site/public/embeddings.json
+
+# OS files
+.DS_Store
