--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -1,35 +1,82 @@
-name: Build PDF from Typst
+name: Build PDF & Deploy Study Hub
 
 on:
   push:
     branches: [master]
     paths:
       - "**.typ"
+      - "site/**"
+      - "scripts/**"
+      - ".github/workflows/**"
 
   workflow_dispatch:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  build-pdf:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # --- Compile Typst to PDF ---
       - name: Setup Typst
         uses: typst-community/setup-typst@v4
 
       - name: Compile Typst to PDF
         run: typst compile cnt_4419_typed_notes.typ cnt_4419_typed_notes.pdf
 
-      - name: Upload PDF as artifact
+      # --- Extract text & generate embeddings ---
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install script dependencies
+        working-directory: scripts
+        run: npm install
+
+      - name: Extract text and generate embeddings
+        working-directory: scripts
+        run: node extract-and-embed.mjs
+
+      # --- Build Nuxt static site ---
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+
+      - name: Install site dependencies
+        working-directory: site
+        run: bun install
+
+      - name: Build Nuxt site
+        working-directory: site
+        run: NUXT_APP_BASE_URL=/cnt_4419_class_notes/ bunx nuxt build --preset github_pages
+
+      # --- Deploy to GitHub Pages ---
+      - name: Configure Pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: site/.output/public
+
+      # --- Upload PDF artifact ---
+      - name: Upload PDF artifact
         uses: actions/upload-artifact@v4
         with:
           name: cnt_4419_typed_notes
           path: cnt_4419_typed_notes.pdf
 
+      # --- Update GitHub Release ---
       - name: Update latest release
         uses: softprops/action-gh-release@v2
         with:
@@ -39,5 +86,21 @@ jobs:
             Auto-built PDF from the latest push to `master`.
 
             Last updated: ${{ github.event.head_commit.timestamp }}
+
+            📖 **[View Study Hub](https://trevorflahardy.github.io/cnt_4419_class_notes/)**
           files: cnt_4419_typed_notes.pdf
           make_latest: true
+
+  deploy:
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
